templates/tileserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tileserver-ingress
  namespace: vectoratlas
  annotations:
    nginx.ingress.kubernetes.io/proxy-cache: "mapcache"
    nginx.ingress.kubernetes.io/proxy-cache-valid: "200 10m"
    nginx.ingress.kubernetes.io/proxy-cache-key: "$request_uri"
    nginx.ingress.kubernetes.io/expires: "1h"
    nginx.ingress.kubernetes.io/vary-accept-encoding: "true"
    nginx.ingress.kubernetes.io/access-log-off: "true"
spec:
  rules:
    -http:
        paths:
          - path: /data/.+\.(png|pbf)$
            pathType: ImplementationSpecific
            backend:
              service:
                name: tileserver  # Pointing to the tileserver service
                port:
                  number: 80
